# ATLAS

./: .gitignore  .gitmodules  LocalRun_TestStudies.sh  LocalRun_TestStudies.sh~  README.md  cutflow_signal_DAODtoNTUPLE_mc.py  cutflow_signal_DAODtoNTUPLE_mc.py~  install.sh  setup.sh
MicroNTupleMaker/: compile.sh  filemap_data.json  filemap_multijet.json  filemap_resubmit.json  filemap_signals.json  filemap_signals_v6.json  filemap_test.json  filemap_test2.json  filemap_test3.json  filemap_test4.json  filemap_test_orig.json  filemap_ttbar.json  filemap_wjets.json  filemap_wzjets.json  filemap_zjets.json  grid_run.sh  grid_test.sh  run_multijets.sh  run_signals.sh  run_test.sh  setup.sh
Results/: MicroNTuplePlotterClass.h  PlotFunctions.h  PlotParams.h  myPlotter.C  plotterExamples.C  signalDSID_table.txt  simplePlotter.C
SVJAlgo/: Dockerfile  MasterCMake
condor/: condor_run.sh  fileSkimmer.C  fileSkimmer.h  hadd_input.sh  local_run.sh  make_files_lists.sh  submitCondor.py  v8p1Class.C  v8p1Class.h
configs/: cutflow_signal_DAODtoNTUPLE_mc.py  cutflow_signal_DAODtoNTUPLE_mc_v2.py  cutflow_signal_DAODtoNTUPLE_mc_v3.py
xAHAnalysis/src/SVJAlgo/: CMakeLists.txt
xAHAnalysis/src/SVJAlgo/Root/: MiniTree.cxx  SVJAlgorithm.cxx
xAHAnalysis/src/SVJAlgo/SVJAlgo/: MiniTree.h  SVJAlgorithm.h
xAHAnalysis/src/SVJAlgo/data/: config_SVJAlgo_MC.py  config_SVJAlgo_Nominal_2018.py  config_SVJAlgo_QCD.py  config_SVJAlgo_ZJets.py  config_SVJAlgo_bkg.py  config_SVJAlgo_data.py  config_SVJAlgo_signal.py
xAHAnalysis/src/SVJAlgo/scripts/: Samples.py  gridConfigOptions.py
(+122 files in other folders)
